# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # On branch main # Your branch is up to date with 'origin/main'. # # Changes to be committed: #	modified:   astro.config.mjs #	modified:   package-lock.json #	modified:   package.json #	modified:   src/pages/index.astro #

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
     "@astrojs/mdx": "^2.0.3",
@@ -24,6 +25,7 @@
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "gh-pages": "^6.3.0"
   }
 }
